{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 64,
  "lineage": "b9b4395f-cb5b-ba16-b3e8-0d903a815478",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.1.50",
            "association_id": "eipassoc-0b25c2f85d9eebba6",
            "domain": "vpc",
            "id": "eipalloc-0151c327fc881c155",
            "instance": "i-08a1a740029e728df",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0f136d6c6ca3a6e14",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_dns": "ec2-184-73-49-35.compute-1.amazonaws.com",
            "public_ip": "184.73.49.35",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.task-vpc",
            "aws_internet_gateway.gw",
            "aws_network_interface.web-server-nic"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-task-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0747bdcabd34c712a",
            "arn": "arn:aws:ec2:us-east-1:606852386474:instance/i-08a1a740029e728df",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08a1a740029e728df",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ubuntu",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0f136d6c6ca3a6e14"
              }
            ],
            "primary_network_interface_id": "eni-0f136d6c6ca3a6e14",
            "private_dns": "ip-10-0-1-50.ec2.internal",
            "private_ip": "10.0.1.50",
            "public_ip": "184.73.49.35",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0459d2d5f51d15e72",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f586cbe8eadda7ed",
            "tags": {
              "Name": "Terraform-web-server"
            },
            "tags_all": {
              "Name": "Terraform-web-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0219ca2673e1fd360"
            ]
          },
          "dependencies": [
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:606852386474:internet-gateway/igw-058fb60e67b80e793",
            "id": "igw-058fb60e67b80e793",
            "owner_id": "606852386474",
            "vpc_id": "vpc-0cead1ed994b4eceb"
          },
          "dependencies": [
            "aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-009d567ee131949b8",
                "device_index": 0,
                "instance": "i-08a1a740029e728df"
              }
            ],
            "id": "eni-0f136d6c6ca3a6e14",
            "interface_type": "interface",
            "ipv6_address_count": 0,
            "mac_address": "02:41:17:64:3a:ef",
            "private_ip": "10.0.1.50",
            "private_ips": [
              "10.0.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0219ca2673e1fd360"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f586cbe8eadda7ed"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.subnet-1",
            "aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Task-routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:606852386474:route-table/rtb-08886eafe7c8339b0",
            "id": "rtb-08886eafe7c8339b0",
            "owner_id": "606852386474",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-058fb60e67b80e793",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-058fb60e67b80e793",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Task-Routetable"
            },
            "tags_all": {
              "Name": "Task-Routetable"
            },
            "vpc_id": "vpc-0cead1ed994b4eceb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.task-vpc",
            "aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05811147b5115d94e",
            "route_table_id": "rtb-08886eafe7c8339b0",
            "subnet_id": "subnet-0f586cbe8eadda7ed"
          },
          "dependencies": [
            "aws_route_table.Task-routetable",
            "aws_subnet.subnet-1",
            "aws_vpc.task-vpc",
            "aws_internet_gateway.gw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:606852386474:security-group/sg-0219ca2673e1fd360",
            "description": "Allow web traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0219ca2673e1fd360",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "606852386474",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "tags_all": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cead1ed994b4eceb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:606852386474:subnet/subnet-0f586cbe8eadda7ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0f586cbe8eadda7ed",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "606852386474",
            "tags": {
              "Name": "Task-Subnet"
            },
            "tags_all": {
              "Name": "Task-Subnet"
            },
            "vpc_id": "vpc-0cead1ed994b4eceb"
          },
          "dependencies": [
            "aws_vpc.task-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "task-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:606852386474:vpc/vpc-0cead1ed994b4eceb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a044bd574cdc5179",
            "default_route_table_id": "rtb-0d15afe8021ed3c93",
            "default_security_group_id": "sg-0e2d5a0ae8e96b339",
            "dhcp_options_id": "dopt-46556a3d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0cead1ed994b4eceb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d15afe8021ed3c93",
            "owner_id": "606852386474",
            "tags": {
              "Name": "Task-VPC"
            },
            "tags_all": {
              "Name": "Task-VPC"
            }
          }
        }
      ]
    }
  ]
}